# crag_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
chunking/: __init__.py  chunkers.py
embedding/: __init__.py  cache.py  dense_node.py  errors.py  quality.py  sparse_node.py
infra/: README.md
ingestion/: __init__.py  __main__.py  alerter.py  dead_letter.py  dry_run_report.py  errors.py  errors_base.py  formats.py  graph.py  ledger.py  manifest.py  nodes.py  orchestrator.py  preflight.py  report.py  retry.py  retry_handler.py  run.py  state.py  types_.py  visualize_graph.py  watcher.py
metadata/: __init__.py  chunk_metadata.py  chunk_validation.py  document_store.py  resolver.py
parsing/: __init__.py  docling_parser.py  errors.py
pipeline/: config.py  qdrant.py  state.py  tracing.py
tests/: test_ip001_formats.py  test_ip002_watcher.py  test_ip003_preflight.py  test_ip004_manifest.py  test_ip025_ingestion_graph.py  test_ip026_batch_orchestrator.py  test_ip027_ingestion_report.py  test_ip028_incremental_ingestion.py  test_ip029_error_hierarchy.py  test_ip030_dead_letter_queue.py  test_ip031_per_node_retry.py  test_ip032_alerting.py  test_ip033_fixtures.py  test_ip034_node_unit_tests.py  test_ip035_e2e_integration.py  test_ip2_parsing.py  test_ip3_metadata.py  test_ip4_chunking.py  test_ip5_embedding.py  test_ip6_vector_store.py  test_qdrant.py  test_state.py  test_tracing.py
vector_store/: __init__.py  deletion.py  errors.py  health_check.py  schema.py  upsert.py
(+11 files in other folders)
